<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.tasks.AddTaskActivity">

    <EditText
        android:id="@+id/taskName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/task_name"
        android:inputType="text"
        tools:layout_editor_absoluteX="104dp"
        tools:layout_editor_absoluteY="184dp" />

    <EditText
        android:id="@+id/editTextTextMultiLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/task_description"
        android:inputType="textMultiLine"
        tools:layout_editor_absoluteX="105dp"
        tools:layout_editor_absoluteY="270dp" />

    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/deadline"
        android:inputType="date"
        tools:layout_editor_absoluteX="104dp"
        tools:layout_editor_absoluteY="438dp" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chip2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remainder_toggle"
        tools:layout_editor_absoluteX="104dp"
        tools:layout_editor_absoluteY="596dp" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:entries="@array/priority_array"
        tools:layout_editor_absoluteX="51dp"
        tools:layout_editor_absoluteY="400dp" />

</androidx.constraintlayout.widget.ConstraintLayout>