<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frame"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.LoginActivity">

    <EditText
        android:id="@+id/usernameLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="text"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="205dp" />

    <EditText
        android:id="@+id/pwdLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/pwd"
        android:inputType="numberPassword"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/usernameLogin"
        app:layout_constraintStart_toStartOf="@+id/usernameLogin"
        app:layout_constraintTop_toBottomOf="@+id/usernameLogin" />

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:text="@string/login"
        app:layout_constraintStart_toStartOf="@+id/pwdLogin"
        app:layout_constraintTop_toBottomOf="@+id/pwdLogin" />

    <Button
        android:id="@+id/registerBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        app:layout_constraintBottom_toBottomOf="@+id/loginBtn"
        app:layout_constraintEnd_toEndOf="@+id/pwdLogin"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/loginBtn"
        app:layout_constraintTop_toBottomOf="@+id/pwdLogin"
        app:layout_constraintVertical_bias="1.0" />
</androidx.constraintlayout.widget.ConstraintLayout>